fix(config): replace List.of() with Collections.emptyList() for Java 8 compat
List.of() was introduced in Java 9; CI compiles with target 1.8.

https://claude.ai/code/session_01PZ3PubrjVHRejhncNCg8LG